# wechat-backup

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: backup.rs  cli.rs  main.rs  utils.rs
