[package]
name = "wechat-backup"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
tokio-tar = "0.3"
walkdir = "2.5"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["full"] }
async-compression = { version = "0.4", features = ["tokio", "zstd"] }